--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -57,7 +57,7 @@
   --z-background: -1;
   --z-base: 0;
   --z-elevated: 1;
-  --z-navbar: 500;
+  --z-navbar: 1000;
   --z-modal: 1000;
 }
 
